--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@biomejs/biome": "^1.7.3",
     "@doist/todoist-api-typescript": "^3.0.3",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
